# simple_software_rendering

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  create_project_linux.sh  create_project_windows.cmd
Models/teapot/: teapot.mtl
Render/: CMakeLists.txt
Render/includes/: Application.hpp  Camera.hpp  CommonDefines.hpp  Mesh.hpp  OBJ_Loader.h  Render.hpp  Window.hpp
Render/sources/: Application.cpp  BufferWindow.cpp  Camera.cpp  Mesh.cpp  Render.cpp  SDLWindow.cpp  Window.cpp  exportToBMP.cpp  main.cpp
