cmake_minimum_required(VERSION 3.21)

SET(PROJECT_NAME simple_software_rendering)

set (CMAKE_DEBUG_POSTFIX = "d") 
get_filename_component(GENERAL_FOLDER ../ ABSOLUTE)
set(CMAKE_INSTALL_PREFIX "${GENERAL_FOLDER}" CACHE PATH "${GENERAL_FOLDER}" FORCE)
message(${CMAKE_BINARY_DIR}/)
project(${PROJECT_NAME})

include(ExternalProject)
set(MODULE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/thirdparty")
set(MODULE_BUILD_DIR "${PROJECT_BINARY_DIR}/thirdparty/build")
set(MODULE_INSTALL_DIR "${CMAKE_BINARY_DIR}/thirdparty/install")

set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

if(MSVC)
	 add_compile_options(/MP)
endif()

ExternalProject_Add(SDL
	SOURCE_DIR ${MODULE_SOURCE_DIR}/SDL
	BINARY_DIR ${MODULE_BUILD_DIR}/SDL
	INSTALL_DIR ${MODULE_INSTALL_DIR}
	CMAKE_ARGS
		"-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
		"-DCMAKE_INSTALL_PREFIX=${MODULE_INSTALL_DIR}"
		"-DCMAKE_C_FLAGS='${CMAKE_C_FLAGS}'"
		"-DCMAKE_C_FLAGS_DEBUG='${CMAKE_C_FLAGS_DEBUG}'"
		"-DCMAKE_C_FLAGS_RELEASE='${CMAKE_C_FLAGS_RELEASE}'"
		"-DSDL_ASSERTIONS=disabled"
		"-DSDL_ATOMIC=OFF"
		"-DSDL_AUDIO=OFF"
		"-DSDL_CPUINFO=OFF"
		"-DSDL_DIRECTX=OFF"
		"-DSDL_EVENTS=ON"
		"-DSDL_FILE=OFF"
		"-DSDL_FILESYSTEM=OFF"
		"-DSDL_FORCE_STATIC_VCRT=ON"
		"-DSDL_HAPTIC=OFF"
		"-DSDL_HIDAPI=ON"
		"-DSDL_JOYSTICK=OFF"
		"-DSDL_LIBC=ON"
		"-DSDL_LOADSO=ON"
		"-DSDL_LOCALE=OFF"
		"-DSDL_MISC=OFF"
		"-DSDL_OPENGL=ON"
		"-DSDL_OPENGLES=OFF"
		"-DSDL_POWER=OFF"
		"-DSDL_RENDER=OFF"
		"-DSDL_SENSOR=OFF"
		"-DSDL_SHARED=ON"
		"-DSDL_STATIC=OFF"
		"-DSDL_TEST=OFF"
		"-DSDL_THREADS=ON"
		"-DSDL_TIMERS=OFF"
		"-DSDL_VIDEO=ON"
		"-DSDL_VULKAN=OFF"
		"-DSDL_WASAPI=OFF"
	BUILD_ALWAYS 1)

add_subdirectory(Render)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Render)
